fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -1051,6 +1051,9 @@ footer{
   .mobile-gallery{
     padding: 0px 20px;
   }
+  section.gallery#gallery {
+    padding: 80px 0px;
+  }
 
 }
 @media (max-width: 991px) {
